--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     // Optional -- Mockito framework
     testCompile 'org.mockito:mockito-core:1.10.19'
     compile 'com.google.code.gson:gson:2.8.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
 }
